--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="img/Signo-Negro.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width:1080px)"  href="css/mobile.css">
+    <link rel="stylesheet" media="screen and (max-width:420px)"  href="css/mobile1.css"> 
     <title>DAIO</title>
 </head>
 <body class="row" style="margin: 0;"> 
