--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
   
         <div class="Subtitulo" style="color: white;">
-          <h2 class="container-fluid text-center text" style="font-size: 55px;">
+          <h2 class="container-fluid text-center text" style="font-size: 300%;">
               <center>Soluciones 360° para <b>tus necesidades</b> en el mundo Crypto.</center>   
           </h2>
         </div>
