--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="shortcut icon" href="img/Signo-Negro.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width:1080px)"  href="css/mobile.css">
-    <link rel="stylesheet" media="screen and (max-width:420px)"  href="css/mobile1.css"> 
+    <link rel="stylesheet" media="screen and (max-width:1080px)"  href="css/mobile.css">
+    <link rel="stylesheet" media="screen and (max-width:420px)"  href="css/mobile1.css">
     <title>DAIO</title>
 </head>
 <body class="row" style="margin: 0;"> 
@@ -341,7 +342,7 @@
         </li>   
         <li>
           <input type="checkbox" id="terms" >
-          <label for="terms" style="color: white;">I have read and agreed with <a href="./html/terminosYcondiciones.html">the terms and conditions.</a></label>
+          <label for="terms" style="color: white;">I have read and agreed with <a href="./html/terminosYcondiciones.html">The terms and conditions.</a></label>
         </li>  
         <li>
           <div class="grid grid-3">
@@ -419,6 +420,8 @@
       </button>
     </div> 
 
+<!-- FOOTER -->
+
     <footer class="pie-pagina ">
       <div class="grupo-1">
           <div class="box">
@@ -427,7 +430,7 @@
                       <img src="../img/Marca-Blanco.png" alt="">
                   </a>
               </figure>
-              <small>&copy; <b>2022 DAIO</b> - . All rights reserved.</small>
+
           </div>
           <div class="box">
               <div class="mini">
@@ -444,13 +447,16 @@
                   <il class="btn" style="color: #000032;"><a  href="../html/preguntas.html" style="color: #fff;">PREGUNTASFRECUENTES</a></il> 
                   <il class="btn" style="color: #000032;"><a href="./html/terminosYcondiciones.html" style="color: #fff;">TÉRMINOSYCONDICIONES</a></il>
               </ul>
+            </div>
+            <div class="box">
               <div class="red-social">
                   <a href="" class="fa fa-facebook" ><img src="./img/icons8-facebook-50.png" alt="" width="30" height="30"></a>
                   <a href="" class="fa fa-instagram"><img src="./img/icons8-instagram-viejo-50.png" alt="" width="30" height="30"></a>
                   <a href="" class="fa fa-linkedin"><img src="./img/icons8-linkedin-50.png" width="30" height="30"></a>
               </div>
-          </div>
-
+           </div> 
+      </div> 
+      <small>&copy; <b>2022 DAIO</b> - . All rights reserved.</small>
   </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script> 
