--- a/html/terminosYcondiciones.html
+++ b/html/terminosYcondiciones.html
@@ -9,10 +9,11 @@
     <link rel="shortcut icon" href="img/Signo-Negro.png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" media="screen and (max-width:1080px)"  href="css/mobile.css">
+    <link rel="stylesheet" media="screen and (max-width:420px)"  href="../css/mobile1.css">
     <title>DAIO</title>
 </head>
 <body style=" background-image: url(../img/Inicio.png);"> 
-  <div>
+  <div class="row">
         <div class="cabecera container-fluid" style="padding: 0;">
           <div class=" container-fluid">
               <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom" style="padding: 0;">
@@ -130,7 +131,7 @@
     </h4>
         </main>
         </div>
-        <footer class="pie-pagina" style="background-color: white;">
+        <footer class="pie-pagina"  style="background-color: white; width: 100%;">
             <div class="grupo-1">
                 <div class="box">
                     <figure>
@@ -138,29 +139,36 @@
                             <img src="../img/Marca-Azul.png" alt="">
                         </a>
                     </figure>
-                    <small style="color: #00009B;">&copy; <b>2022 DAIO</b> - . All rights reserved.</small>
+    
                 </div>
                 <div class="box">
                     <div class="mini">
-                        <ul class="nav nav-pills">
-                            <li class="nav-item"><a href="../index.html" class="nav-link" aria-current="page" style="color: #00009B;">INICIO</a></li>
-                            <li class="nav-item"><a href="../index.html" class="nav-link" style="color: #00009B;">PRODUCTOS</a></li>
-                            <li class="nav-item"><a href="../index.html" class="nav-link" style="color: #00009B;">OPERÁ</a></li>
-                            <li class="nav-item"><a href="../index.html" class="nav-link" style="color: #00009B;">ACERCA DE</a></li>
-                        </ul>
+                      <ul class="nav nav-pills">
+                        <li class="nav-item"><a href="../index.html" class="nav-link" aria-current="page" style="color: #00009B;">INICIO</a></li>
+                        <li class="nav-item"><a href="../html/productos.html" class="nav-link" style="color: #00009B;">PRODUCTOS</a></li>
+                        <li class="nav-item"><a href="../html/opera.html" class="nav-link" style="color: #00009B;">OPERÁ</a></li>
+                        <li class="nav-item"><a href="../html/acercade.html" class="nav-link" style="color: #00009B;">ACERCA DE</a></li>
+                      </ul>
                     </div>
                 </div>
-        <div class="box">
-            <ul id="final"> 
-                <il class="btn"><a  href="../html/preguntas.html" style="color: #00009B;">PREGUNTAS</a></il> 
-                <il class="btn"><a href="../html/terminosYcondiciones.html" style="color: #00009B;">TÉRMINOSYCONDICIONES</a></il>
-              </ul>
-            <div class="red-social">
-                <a href="" class="fa fa-facebook" style="background-color: white;"><img src="../img/facebook.png" alt="" width="20" height="20"></a>
-                <a href="" class="fa fa-instagram" style="background-color: white;"><img src="../img/instagram.png" alt="" width="20" height="20"></a>
-                <a href="" class="fa fa-linkedin" style="background-color: white;"><img src="../img/logotipo-de-linkedin.png" width="20" height="20"></a>
+                <div class="box">
+                    <ul id="final"> 
+                        <il class="btn"><a  href="./index.html" style="color: #00009B;">PREGUNTAS</a></il> 
+                        <il class="btn"><a href="../html/terminosYcondiciones.html" style="color: #00009B;">TÉRMINOSYCONDICIONES</a></il>
+                      </ul>
+                </div> 
+                <div class="box"> 
+                <div class="red-social">
+                        <a href="" class="fa fa-facebook" style="background-color: white;"><img src="../img/facebook.png" alt="" width="20" height="20"></a>
+                        <a href="" class="fa fa-instagram" style="background-color: white;"><img src="../img/instagram.png" alt="" width="20" height="20"></a>
+                        <a href="" class="fa fa-linkedin" style="background-color: white;"><img src="../img/logotipo-de-linkedin.png" width="20" height="20"></a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-  
+            <small style="color: #00009B;">&copy; <b>2022 DAIO</b> - . All rights reserved.</small>
         </footer>
+          </div>
+        </div>
+  </div>
+</body>
+</html>
