--- a/html/preguntas.html
+++ b/html/preguntas.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/Signo-Negro.png">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" media="screen and (max-width:420px)"  href="../css/mobile1.css">
     <title>DAIO</title>
 </head>
 <body class="preguntas ">
@@ -118,7 +119,7 @@
                         <img src="../img/Marca-Azul.png" alt="">
                     </a>
                 </figure>
-                <small style="color: #00009B;">&copy; <b>2022 DAIO</b> - . All rights reserved.</small>
+
             </div>
             <div class="box">
                 <div class="mini">
@@ -133,16 +134,18 @@
             <div class="box">
                 <ul id="final"> 
                     <il class="btn"><a  href="./index.html" style="color: #00009B;">PREGUNTAS</a></il> 
-                    <il class="btn"><a href="./html/Nosotros.html" style="color: #00009B;">TÉRMINOSYCONDICIONES</a></il>
+                    <il class="btn"><a href="../html/terminosYcondiciones.html" style="color: #00009B;">TÉRMINOSYCONDICIONES</a></il>
                   </ul>
-                <div class="red-social">
+            </div> 
+            <div class="box"> 
+            <div class="red-social">
                     <a href="" class="fa fa-facebook" style="background-color: white;"><img src="../img/facebook.png" alt="" width="20" height="20"></a>
                     <a href="" class="fa fa-instagram" style="background-color: white;"><img src="../img/instagram.png" alt="" width="20" height="20"></a>
                     <a href="" class="fa fa-linkedin" style="background-color: white;"><img src="../img/logotipo-de-linkedin.png" width="20" height="20"></a>
                 </div>
             </div>
         </div>
-      
+        <small style="color: #00009B;">&copy; <b>2022 DAIO</b> - . All rights reserved.</small>
     </footer>
     </div>
   </div>
