--- a/html/preguntas.html
+++ b/html/preguntas.html
@@ -24,9 +24,9 @@
         
               <ul class="nav nav-pills">
                 <li class="nav-item"><a href="../index.html" class="nav-link" aria-current="page">INICIO</a></li>
-                <li class="nav-item"><a href="../html/productos.html" class="nav-link">PRODUCTOS</a></li>
-                <li class="nav-item"><a href="../html/opera.html" class="nav-link">OPERÁ</a></li>
-                <li class="nav-item"><a href="../html/acercade.html" class="nav-link">ACERCA DE</a></li>
+                <li class="nav-item"><a href="../index.html" class="nav-link">PRODUCTOS</a></li>
+                <li class="nav-item"><a href="../index.html" class="nav-link">OPERÁ</a></li>
+                <li class="nav-item"><a href="../index.html" class="nav-link">ACERCA DE</a></li>
                 <li class="nav-item"><a href="../html/preguntas.html" class="nav-link">PREGUNTAS FRECUENTES</a></li>
               </ul>
             </header>
@@ -125,15 +125,15 @@
                 <div class="mini">
                   <ul class="nav nav-pills">
                     <li class="nav-item"><a href="../index.html" class="nav-link" aria-current="page" style="color: #00009B;">INICIO</a></li>
-                    <li class="nav-item"><a href="../html/productos.html" class="nav-link" style="color: #00009B;">PRODUCTOS</a></li>
-                    <li class="nav-item"><a href="../html/opera.html" class="nav-link" style="color: #00009B;">OPERÁ</a></li>
-                    <li class="nav-item"><a href="../html/acercade.html" class="nav-link" style="color: #00009B;">ACERCA DE</a></li>
+                    <li class="nav-item"><a href="../index.html" class="nav-link" style="color: #00009B;">PRODUCTOS</a></li>
+                    <li class="nav-item"><a href="../index.html" class="nav-link" style="color: #00009B;">OPERÁ</a></li>
+                    <li class="nav-item"><a href="../index.html" class="nav-link" style="color: #00009B;">ACERCA DE</a></li>
                   </ul>
                 </div>
             </div>
             <div class="box">
                 <ul id="final"> 
-                    <il class="btn"><a  href="./index.html" style="color: #00009B;">PREGUNTAS</a></il> 
+                    <il class="btn"><a  href="./preguntas.html" style="color: #00009B;">PREGUNTAS</a></il> 
                     <il class="btn"><a href="../html/terminosYcondiciones.html" style="color: #00009B;">TÉRMINOSYCONDICIONES</a></il>
                   </ul>
             </div> 
