--- a/html/terminosYcondiciones.html
+++ b/html/terminosYcondiciones.html
@@ -135,7 +135,7 @@
             <div class="grupo-1">
                 <div class="box">
                     <figure>
-                        <a href="">
+                        <a href="../index.html">
                             <img src="../img/Marca-Azul.png" alt="">
                         </a>
                     </figure>
@@ -145,15 +145,15 @@
                     <div class="mini">
                       <ul class="nav nav-pills">
                         <li class="nav-item"><a href="../index.html" class="nav-link" aria-current="page" style="color: #00009B;">INICIO</a></li>
-                        <li class="nav-item"><a href="../html/productos.html" class="nav-link" style="color: #00009B;">PRODUCTOS</a></li>
-                        <li class="nav-item"><a href="../html/opera.html" class="nav-link" style="color: #00009B;">OPERÁ</a></li>
-                        <li class="nav-item"><a href="../html/acercade.html" class="nav-link" style="color: #00009B;">ACERCA DE</a></li>
+                        <li class="nav-item"><a href="../index.html" class="nav-link" style="color: #00009B;">PRODUCTOS</a></li>
+                        <li class="nav-item"><a href="../index.html" class="nav-link" style="color: #00009B;">OPERÁ</a></li>
+                        <li class="nav-item"><a href="../index.html" class="nav-link" style="color: #00009B;">ACERCA DE</a></li>
                       </ul>
                     </div>
                 </div>
                 <div class="box">
                     <ul id="final"> 
-                        <il class="btn"><a  href="./index.html" style="color: #00009B;">PREGUNTAS</a></il> 
+                        <il class="btn"><a  href="../html/preguntas.html" style="color: #00009B;">PREGUNTAS</a></il> 
                         <il class="btn"><a href="../html/terminosYcondiciones.html" style="color: #00009B;">TÉRMINOSYCONDICIONES</a></il>
                       </ul>
                 </div> 
