--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         </li>   
         <li>
           <input type="checkbox" id="terms" >
-          <label for="terms" style="color: white;">I have read and agreed with <a href="./html/terminosYcondiciones.html">The terms and conditions.</a></label>
+          <label for="terms" style="color: white;">I accept <a href="./html/terminosYcondiciones.html">terms and conditions.</a></label>
         </li>  
         <li>
           <div class="grid grid-3">
